overflow correction

--- a/src/display_style.css
+++ b/src/display_style.css
@@ -28,4 +28,5 @@
 .display-amount {
     padding: 5px 5px 5px 2.5px;
     grid-area:a;
+    overflow: auto;
 }
